vcl/source/opengl/OpenGLContext.cxx
@@ -1654,6 +1654,7 @@ void OpenGLContext::ReleaseFramebuffer( OpenGLFramebuffer* pFramebuffer )
 void OpenGLContext::ReleaseFramebuffer( const OpenGLTexture& rTexture )
 {
     OpenGLZone aZone;
+
     OpenGLFramebuffer* pFramebuffer = mpLastFramebuffer;
 
     while( pFramebuffer )
@@ -1662,6 +1663,8 @@ void OpenGLContext::ReleaseFramebuffer( const OpenGLTexture& rTexture )
         {
             BindFramebuffer( pFramebuffer );
             pFramebuffer->DetachTexture();
+            if (mpCurrentFramebuffer == pFramebuffer)
+                BindFramebuffer( NULL );
         }
         pFramebuffer = pFramebuffer->mpPrevFramebuffer;
     }
@@ -1670,6 +1673,7 @@ void OpenGLContext::ReleaseFramebuffer( const OpenGLTexture& rTexture )
 void OpenGLContext::ReleaseFramebuffers()
 {
     OpenGLZone aZone;
+
     OpenGLFramebuffer* pFramebuffer = mpLastFramebuffer;
     while( pFramebuffer )
     {
@@ -1680,6 +1684,7 @@ void OpenGLContext::ReleaseFramebuffers()
         }
         pFramebuffer = pFramebuffer->mpPrevFramebuffer;
     }
+    BindFramebuffer( NULL );
 }
 
 OpenGLProgram* OpenGLContext::GetProgram( const OUString& rVertexShader, const OUString& rFragmentShader, const OString& preamble )
